Fixed up bugs with page alignment and updated version number.

--- a/static/style.css
+++ b/static/style.css
@@ -22,11 +22,14 @@ a:hover, a:active {
 
 #body {
     font-family: Arial, Helvetica, sans-serif;
+    max-width: 1216px;
+    min-width: 970px;
+    margin: 0 auto;
 }
 
 #header {
     text-align: left;
-    margin-left: -64px;
+    margin-left: -32px;
     margin-bottom: -28px;
     padding-left: 10em;
 }
@@ -34,16 +37,19 @@ a:hover, a:active {
 #menu {
     text-align: right;
     float: left;
-    width: 10em;
+    width: 192px;
 }
 
 #menu li {
-    display: block;
+    display: inline-block;
+    float: right;
+    clear: both;
     max-width: 10em;
     background: #ffffff;
     border-top: 8px solid #d5b5ea;
     border-left: 8px solid #d5b5ea;
     border-bottom: 8px solid #d5b5ea;
+    margin-left: auto;
     margin-bottom: -8px;
     padding: 2px 0.5em;
 }
@@ -51,10 +57,9 @@ a:hover, a:active {
 #content {
     line-height: 1.5em;
     padding: 0 1em;
-    margin-left: 10em;
+    min-height: 230px;
+    margin-left: 192px;
     margin-right: 256px;
-    max-width: 768px;
-    min-width: 500px;
     text-align: justify;
     background: #ffffff;
     border: 8px solid #7227a2;
